# tameshk-discord-bot

./: .gitignore  .replit  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
bot/: PersianSwear.py  ban.py  live.py  main.py  managing_and_fun.py
config-files/: swear-words.json
